--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/test
 /application/views/assets/img/download/hinoken
 /application/views/assets/img/download/2015-12-15_oniiro
 /cli/documents/cli_lvc_checker.txt
