--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   ],
   "bugs": {
     "url": "https://github.com/ikr4185/nijiru-system/issues"
+  },
+  "dependencies": {
+    "casperjs": "^1.1.3",
+    "phantomjs": "^2.1.7"
   }
 }
