ついでだからcomposerのvendorにもgitkeepいれちゃう

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /Controllers
 /class
 /.idea
-/application/vendor
+/application/vendor/*
 /application/_cores/config/config.ini
 /php_my_admin
 cli/logs/
