--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "casperjs": "^1.1.3",
-    "phantomjs": "^2.1.7"
+    "express": "^4.14.0",
+    "phantomjs": "^2.1.7",
+    "socket.io": "^1.6.0"
   }
 }
