--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,9 @@ RewriteBase /
 # phpMyAdmin へのアクセスを分岐
 RewriteCond %{REQUEST_URI} !^/php_my_admin/
 
+# test
+#RewriteCond %{REQUEST_URI} !^/test/fc2/
+
 # Node系アプリケーションも分岐
 RewriteCond %{REQUEST_URI} !^/node_application/
 
